[workspace]
resolver = "2"
default-members = ["game"]
members = ["engine", "engine_macros", "game", "ui"]

[profile.dev]
debug = 0

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
unsafe_code = "forbid"
missing_safety_doc = "allow"
module_inception = "allow"
result_large_err = "allow"
wildcard_imports = "deny"
# unused = { level = "allow", priority = -1 } # For exploratory dev.
# missing_docs = "warn"

[workspace.dependencies]
winit = { version = "0.30.12", default-features = false }
engine_macros = { path = "engine_macros" }