[package]
name = "game"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game"
path = "src/main.rs"


[dependencies]
# -- Farmer Replaced
engine = { path = "../engine" }
ui = { path = "../ui" }
engine_macros.workspace = true


# -- Tracing
tracing = { version = "0.1", features = ["default"] }
# -- Async
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "test-util",
] }
futures = "0.3"
tokio-stream = "0.1"
# -- Others
derive_more = { version = "2.0", features = ["from", "display"] }
lazy_static = "1.4.0"
