[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Farmer Replaced
engine = { path = "../engine" }

# -- Async
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "io-std",
    "test-util",
] }

# -- UI
eframe = { version = "0.33.2", features = ["default"] }
winit.workspace = true
